--- a/styles.css
+++ b/styles.css
@@ -415,6 +415,7 @@ button:hover {
     .intro-and-image {
         display: flex;
         justify-content: space-evenly;
+        align-items: center;
         /* justify-content: space-around; */
         margin-bottom: 30px;
     }
@@ -481,7 +482,7 @@ button:hover {
         width: 65%;
     }
    header {
-        margin-top: 60px;
+        margin-top: 20px;
         width: 60%;
    }
    header h2, header h1 {
@@ -491,7 +492,7 @@ button:hover {
         font-size: 38px;
    }
    #muni {
-        width: 350px;
+        width: 300px;
    }
    .projects {
     gap: 40px;
