--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,12 @@ section > h1 {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 100%;
+}
+#div3 p {
+    width: 100%;
+    padding-top: 13px;
+    /* text-align: justify; */
 }
 .div3-ul {
     display: flex;
